Fix text overflow on country cards

--- a/src/App.scss
+++ b/src/App.scss
@@ -147,7 +147,7 @@ body {
   border: 1px solid $light-blue;
   border-radius: 3px;
   text-align: right;
-  height: 150px;
+  height: 160px;
   text-decoration: none;
   padding: 12px;
   position: relative;
@@ -168,9 +168,9 @@ body {
   }
 
   h2 {
-    margin-top: 24px;
+    margin-top: 12px;
     font-weight: bold;
-    font-size: 1.375rem;
+    font-size: 1.25rem;
   }
 
   p {
@@ -260,6 +260,17 @@ body {
   .countries-container {
     grid-template-columns: repeat(3, 1fr);
     padding: 0;
+  }
+
+  .country-box {
+    &:nth-child(4n+2),
+    &:nth-child(4n+3) {
+      background-color: unset;
+    }
+
+    &:nth-of-type(odd) {
+      background-color: $blue;
+    }
   }
 
   .details-stats {
